# iPhyloGeo_plus_plus

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  __init__.py  black.toml  find_venv_changes.py  generate_uis.ps1  output_pipe.txt  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  start-optimized.bat  start_and_pause.bat  test.py
OneDrive/Bureau/iPhyloGeo_plus_plus/: .pre-commit-config.yaml  pyproject.toml  start-no-gpu.bat  start.bat  start_test.bat
OneDrive/Bureau/iPhyloGeo_plus_plus/datasets/: simplot.csv
OneDrive/Bureau/iPhyloGeo_plus_plus/docs/diagrams/: UML.vsdx  iphylogeo++implementation_class_diagram.puml
OneDrive/Bureau/iPhyloGeo_plus_plus/exe-generation/: TEST_frozenapp.bat  betterEXE_notes.md  license.txt
OneDrive/Bureau/iPhyloGeo_plus_plus/img/: resources.qrc
OneDrive/Bureau/iPhyloGeo_plus_plus/scripts/: event_connector.py  setup.py
OneDrive/Bureau/iPhyloGeo_plus_plus/scripts/Climatic/: climat.py  climat_statistics.py  climat_tree_graph.py  climatic_graph_settings.py
OneDrive/Bureau/iPhyloGeo_plus_plus/scripts/Genetics/: genetics.py  genetics_tree.py
OneDrive/Bureau/iPhyloGeo_plus_plus/scripts/Qt/: help.ui  help_ui.py  loading_ui.py  main.py  main_ui.py  parameters.ui  wait.ui
OneDrive/Bureau/iPhyloGeo_plus_plus/scripts/hooks/: hook-qtpy.py
OneDrive/Bureau/iPhyloGeo_plus_plus/scripts/ui_controllers/: __init__.py
OneDrive/Bureau/iPhyloGeo_plus_plus/scripts/utils/: frozen_app_functions.py  help.py  params_default.yaml  result_settings_dialog.py  tree_graph.py  tree_map.py
Qt/: cltree.py  help.py  main.py  main.ui  mainwindow.py  mainwindow.ui  parameters.py  parameters.ui
Tests/: test_climatic.py  test_genetics.py
datasets/: Full_Species_Data.csv  bigCsv.csv  bigFasta.fasta  data.csv  data_geo_Cumacea.csv  data_sequences_Cumacea.dnd  data_sequences_Cumacea.fasta  geo.csv  geo2_test.csv  geo3_test.csv  geo4_test.csv  geo6_with_loc.csv  geo_with_loc.csv  h_pylori.csv  h_pylori.fasta  h_pylori_small.csv  h_pylori_small.fasta  simplot.csv  simplot.dnd  simplot.fasta  small_seq.fasta
docs/diagrams/: UML.vsdx
exe-generation/: BUILD_frozenapp.bat  BUILDwMSI_frozenapp.bat  TEST_frozenapp.bat  betterEXE_notes.md  cx_freeze-test.bat  exe_generation_notes.ipynb  exe_troubleshooting.ipynb  exe_troubleshooting.md  find_string_in_scripts.py  iPhyloGeo_plus_plus.iss  iPhyloGeo_plus_plus_and_Ghostscript.iss  installer_notes.md  list_files_to_bundle.py  pyinstaller-build-testfile.bat  pyinstaller-build.bat  pyinstaller-test-testfile.bat  pyinstaller-test.bat
exe-generation/bundled_installer_files/: Package.wxs  iPhyloGeo++.wixproj
img/: resources.qrc
scripts/: Main.py  PreferencesDialog.py  UserConfig.py  Worker.py  build.bat  climat.py  cltree.py  event_connector.py  figure.py  genetics.py  help.py  help.txt  howtouse.py  m.html  main.py  main.spec  main.spec.old  main0.py  main_old.py  navigation.py  output.csv  parameters.py  params.yaml  params_default.yaml  requirements.txt  result.py  settings.py  setup.py  temp_map.html  test.bat  test.py  test.spec  tree.py  tree1.py  ui_helpers.py  wait.py  worker.py  worker1.py
scripts/Climatic/: climat.py  climat_data.py  climat_tree.py  climat_tree_graph.py  climatic_graph_settings.py  climatic_preferences_dialog.py
scripts/Genetics/: genetic_params_dialog.py  genetics.py  genetics_alignment.py  genetics_alignment_plot.py  genetics_plot_chart.py  genetics_statistics.py  genetics_tree.py
scripts/Qt/: frozen_main.ui  frozen_main_ui.py  help.py  help_ui.py  loading.py  loading.ui  loading_ui.py  main.py  main.ui  main_ui.py  mainwindow_ui.py  parameters.py  parameters.ui  parameters_ui.py  wait.py  wait_ui.py
scripts/aPhyloGeo/: Alignement.py  MultiProcessor.py  aPhyloGeo.py  main.py  params.py  params.yaml
scripts/hooks/: hook-qtmodern.py  hook-qtpy.py
scripts/results/: aligned_seq.fasta.json  aligned_simplot.fasta.json  aligned_small_seq.fasta.json  geneticTrees.json  output.csv  temp_map.html
scripts/ui/: loading_dialog.py
scripts/ui_controllers/: climate_page_controller.py  genetics_page_controller.py  result_page_controller.py
scripts/utils/: ClimaticGraphSettings.py  ClimaticGraphSettings.yaml  ClimaticPreferencesDialog.py  HoverLabel.py  MyDumper.py  PreferencesDialog.py  climatic_graph_settings.py  climatic_preferences_dialog.py  custom_table.py  download_file.py  error_dialog.py  file_caching.py  frozen_app_functions.py  geneticParamsDialog.py  genetic_params_dialog.py  help.py  hover_label.py  my_dumper.py  oo_patch.py  params.yaml  params_default.yaml  resultSettingsDialog.py  result_settings_dialog.py  settings.py  settingsWindow.py  tree_graph.py  tree_map.py
tests/: test_climatic.py  test_genetics.py  use_case_tests.md  use_case_tests_datasets.md
