[tool.poetry]
name = "iphylogeo-plus-plus"
version = "1.0.0"
description = "Multi-platform Application for Analyzing Phylogenetic Trees with Climatic Parameters"
authors = ["Tahiri Lab <Nadia.Tahiri@USherbrooke.ca>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tahiri-lab/iPhyloGeo_plus_plus"
include = ["bin/**"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
aphylogeo = "1.0.0"
arrow = "1.3.0"
asyncio = "3.4.3"
attrs = "23.2.0"
bio = "1.7.1"
biopython = "1.84"
biothings-client = "0.3.1"
branca = "0.7.2"
certifi = "2024.7.4"
cfgv = "3.4.0"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
colorama = "0.4.6"
contourpy = "1.2.1"
custom-inherit = "2.4.1"
cycler = "0.12.1"
cython = "3.0.10"
dendropy = "4.6.4"
dill = "0.3.8"
distlib = "0.3.9"
disutils = "1.4.32.post2"
ete3 = "3.1.3"
filelock = "3.16.1"
folium = "0.17.0"
fonttools = "4.53.1"
frozenlist = "1.4.1"
gprofiler-official = "1.0.0"
identify = "2.6.1"
idna = "3.7"
iniconfig = "2.0.0"
jinja2 = "3.1.4"
kaleido = "0.2.1"
kiwisolver = "1.4.5"
loguru = "0.7.2"
markupsafe = "2.1.5"
matplotlib = "3.9.1"
multidict = "6.0.5"
multipledispatch = "1.0.0"
multiprocess = "0.70.16"
mygene = "3.2.2"
networkx = "3.3"
nodeenv = "1.9.1"
numpy = "1.26.4"
packaging = "24.1"
pandas = "2.2.2"
pillow = "10.4.0"
platformdirs = "4.2.2"
plotly = "5.23.0"
pluggy = "1.5.0"
pooch = "1.8.2"
pre-commit = "4.0.1"
psutil = "5.9.8"
pyparsing = "3.1.2"
pypng = "0.20220715.0"
pyqt5-qt5 = "5.15.2"
pyqt5-stubs = "5.15.6.0"
pyqt5-sip = "12.15.0"
pyqtwebengine-qt5 = "5.15.2"
pytest = "7.4.4"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
pyyaml = "6.0.1"
qtmodern = "0.2.0"
qtpy = "2.4.1"
reportlab = "4.2.2"
requests = "2.32.3"
robinson-foulds = "1.2"
scipy = "1.14.0"
seaborn = "0.13.2"
setuptools = "71.1.0"
six = "1.16.0"
tenacity = "8.5.0"
textdistance = "4.6.3"
toyplot = "1.0.3"
toytree = "3.0.4"
tqdm = "4.66.4"
types-python-dateutil = "2.9.0.20240316"
tzdata = "2024.1"
urllib3 = "2.2.2"
virtualenv = "20.27.1"
win32-setctime = "1.1.0"
xyzservices = "2024.6.0"
yarl = "1.9.4"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
ruff = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | \\.idea
  | \\iPhyloGeo_env
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_third_party = ["PyQt5", "Bio", "yaml"]
known_first_party = ["aphylogeo", "utils"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C", "N", "B", "Q", "A"]
ignore = [
    "E501",  # Ignore line length errors
    "F401",  # Ignore unused imports
    "N806",  # Ignore variable in function should be lowercase
    "N802",  # Ignore function name should be lowercase
    "B007",  # Ignore loop control variable not used within loop body
    "C901",  # Ignore function is too complex
    "C408",  # Ignore unnecessary `dict` call
]
target-version = "py39"
